Project container spacing fix

--- a/src/Pages/Projects/Projects.module.css
+++ b/src/Pages/Projects/Projects.module.css
@@ -2,6 +2,7 @@
     min-width: 288px;
     display:flex;
     justify-content: center;
+    margin-top: 64px;
 }
 .project{
     background:rgba(255,255,255,0.05);
@@ -51,6 +52,7 @@
         display:flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 16px;
     }
     .project{
         width: 60%;
